# starling-capture

./: CHANGELOG.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md  ui-update.md  ui_update.md
.github/workflows/: android.yml  build.yml  production-release.yml  qa-release.yml  release.yml  upload-drive.yml
app/: .gitignore  build.gradle
app/schemas/io.numbersprotocol.starlingcapture.data.AppDataBase/: 1.json
app/src/internal/: AndroidManifest.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
util/verification/: .gitignore  README.md  pylintrc  pyproject.toml  starling_capture_verifier.py  verify.sh
util/verification/tests/: test_verification.py  test_verify_legacy_zion_signature.py
util/verification/tests/assets/: README.md  information.json  signature.json
util/verification/tests/assets/zion-classic/ede8c1b820a19e0a438ce28873501fafd33886a21cf4e3c1ffea24f523c857c4/: information.json  signature.json
util/verification/tests/assets/zion-session-classic/b94c5af28e3aaba7578f6737aeab4d2eae4e08a2e7a52a1d55991d92b9552225/: caption.txt  information.json  signature.json
util/verification/tests/assets/zion-session/855ba1f6548f710fe3e67f9bfc943c4483bd50a432480ce23061af96d672fd3b/: caption.txt  information.json  signature.json
util/verification/tests/assets/zion/9f9af13673a0ea1e608fdd4c6ce6c746dd03dd58d184705ea7d1e1ef175e5640/: information.json  signature.json
util/verification/verification/: .verification.py.swp  __init__.py  verification.py
(+230 files in other folders)
