[tool.poetry]
name = "verification"
version = "0.1.0"
description = ""
authors = ["Sean Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ecdsa = "^0.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
mypy = "^0.782"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
