[tool.poetry]
name = "verification"
version = "0.1.0"
description = ""
authors = ["Sean Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ecdsa = "^0.16"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pylint = "^2.6.0"
mypy = "^0.790"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
